k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botnet-detector-service
spec:
  type: NodePort
  selector:
    app: botnet-detector
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
